[tool.poetry]
name = "homectl-robot-cleaner"
version = "1.7.1"
description = "Tells the robot vacuum cleaner to clean the house when nobody is there"
authors = ["Chadi El Masri"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cleaner" }]

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "1.49.0"
requests = "2.32.4"
pydantic = "^2.11.5"

[tool.poetry.group.dev.dependencies]
flake8 = "7.2.0"
flask = "3.1.1"
mypy = "1.16.0"
pytest = "8.4.0"
testcontainers = "4.10.0"
types-requests = "2.32.0.20250602"
Werkzeug = "3.1.3"

[tool.poetry.scripts]
release = "release:release"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true
warn_redundant_casts = true

